<resources>
  <string name="app_name">Break</string>
  <string name="top_rated">Top Rated</string>
  <string name="popular">Popular</string>
  <string name="upcoming">Upcoming</string>
  <string name="latest" translatable="false">Latest</string>
  <string name="now_playing">Now Playing</string>
  <string name="favorite">Favorite</string>
  <string name="companies">PRODUCTION COMPANIES</string>
  <string name="more_info">MORE INFO</string>
  <string name="view">View</string>
  <string name="budget">   Budget   </string>
  <string name="hollywood">Superstars</string>
  <string name="revenue">   Revenue   </string>
  <string name="noconnection">OPEN ANY NETWORK CONNECTION !</string>
  <string name="favorite_count">There are %s in your offline database</string>
  <string name="delete_msg">Are you sure to delete :</string>
  <string name="delete_move">Delete movie from favorites</string>
  <string name="yes">Yes</string>
  <string name="no">Cancel</string>
  <string name="no_data">There is no favorite movies at this moment</string>
  <string name="added_success">Added to favorites successfully !</string>
  <string name="details">DETAILS</string>
  <string name="cast">CAST</string>
  <string name="trailers">TRAILERS</string>
  <string name="reviews">REVIEWS</string>
  <string name="recommend">RECOMMENDATIONS</string>
  <string name="similars">SIMILAR</string>
  <string name="retry">Retry</string>
  <string name="no_review">Seems like this movie has no reviews !</string>
  <string name="book">Book</string>
  <string name="home">Home</string>
  <string name="music">Music</string>
  <string name="movie">Movie</string>
  <string name="theinternship">the internship</string>
  <string name="comedy">comedy</string>
  <string name="dark_mode"> Night Mode</string>
  <string name="senorita">senorita</string>
  <string name="breaks">Break</string>
  <string name="action_filter">Filter</string>
  <string name="loading_movies">Loading Movies</string>
  <string name="sort_by">Sort By</string>
  <string name="summary">Summary</string>
  <string name="release_date">Release Date: %s</string>
  <string name="rating">%s/10</string>
  <string name="favorites">Favorites</string>
  <string name="newest">Newest</string>
  <string name="highest_rated">Highest Rated</string>
  <string name="most_popular">Most Popular</string>
  <string name="action_search">Search</string>
  <string name="too">TODO</string>
  <string name="recommendation">recommendation</string>
  <string name="email_not_verfied">Email Not Verfied !</string>
  <string name="facebook">FaceBook</string>
  <string name="user_profession">User Profession</string>
  <string name="profession">Profession</string>
  <string name="favorite_genres_of_movies">Favorite Genres of Movies</string>
  <string name="verify_now">Verify Now</string>
  <string name="todo">TODO</string>
  <string name="twitter_account">twitter Account</string>
  <string name="email">Email</string>
  <string name="full_name">Full Name</string>
  <string name="your_name">Your Name</string>
  <string name="facebook_account">Facebook Account</string>
  <string name="user_interst">User Interst</string>


  <string name="exit">Exit Application</string>
  <string name="exit_msg">Are you sure you want to exit</string>
</resources>
