<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:id="@+id/verifyMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/email_not_verfied"
        android:textColor="#2196F3"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <Button
        android:id="@+id/resendCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:text="@string/verify_now"
        android:visibility="gone" />
    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/relative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/profileImage"
            android:layout_width="201dp"
            android:layout_height="168dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dp"
            app:srcCompat="@drawable/girl_avatar1"
            android:contentDescription="@string/todo" />




        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profileImage"
            android:layout_marginStart="5dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="16dp"
            app:srcCompat="@drawable/ic_person_white_24dp"
            android:contentDescription="TODO" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profileImage"
            android:layout_marginStart="50dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="25dp"
            android:text="@string/full_name" />


        <TextView
            android:id="@+id/profileName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profileImage"
            android:layout_marginStart="50dp"
            android:layout_marginTop="90dp"
            android:layout_marginEnd="25dp"
            android:hint="@string/your_name"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:layout_below="@+id/profileName"
            android:hint="Age"/>


        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/age"
            android:layout_marginStart="5dp"
            android:layout_marginTop="24dp"
            app:srcCompat="@drawable/ic_email_black_24dp" />


        <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/age"
                android:layout_marginStart="50dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="25dp"
                android:text="@string/email" />

            <TextView
                android:id="@+id/profileEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView4"
                android:layout_marginStart="50dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="25dp"
                android:hint="Your Email Address"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/profileEmail"
                android:layout_marginStart="5dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                app:srcCompat="@drawable/ic_local_phone_black_24dp" />


            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/profileEmail"
                android:layout_marginStart="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="25dp"
                android:text="Phone" />

            <TextView
                android:id="@+id/profilePhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView5"
                android:layout_marginStart="50dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="25dp"
                android:hint="Phone Number"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/facebook_imageview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/profilePhone"
                android:layout_marginStart="5dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                app:srcCompat="@drawable/ic_icon_facebook" />

            <TextView
                android:id="@+id/facebook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/profilePhone"
                android:layout_marginStart="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="25dp"
                android:text="@string/facebook" />

            <TextView
                android:id="@+id/facebook_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/facebook"
                android:layout_marginStart="50dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="25dp"
                android:hint="@string/facebook_account"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/twitter_imageview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/facebook_textview"
                android:layout_marginStart="5dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                app:srcCompat="@drawable/ic_twitter_white" />

            <TextView
                android:id="@+id/twitter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/facebook_textview"
                android:layout_marginStart="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="25dp"
                android:text="twitter" />

            <TextView
                android:id="@+id/twitter_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="25dp"
                android:layout_below="@+id/twitter"
                android:hint="@string/twitter_account"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/profession_imageview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/twitter_textview"
                android:layout_marginStart="5dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                app:srcCompat="@drawable/ic_baseline_work_24"
                android:contentDescription="TODO" />

            <TextView
                android:id="@+id/Profession"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/twitter_textview"
                android:layout_marginStart="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="25dp"
                android:text="@string/profession" />

            <TextView
                android:id="@+id/profession_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="25dp"
                android:layout_below="@+id/Profession"
                android:hint="@string/user_profession"
                android:textSize="16sp"
                android:textStyle="bold" />

        <ImageView
            android:id="@+id/interst_imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profession_textview"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            app:srcCompat="@drawable/mpa" />

        <TextView
            android:id="@+id/interst"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profession_textview"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="25dp"
            android:text="@string/favorite_genres_of_movies" />

        <TextView
            android:id="@+id/interst_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="25dp"
            android:layout_below="@+id/interst"
            android:hint="@string/user_interst"
            android:textSize="16sp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/changeProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:background="@android:color/holo_blue_light"
            android:layout_below="@+id/interst_textview"
            android:text="Edit Profile" />

        <Button
            android:id="@+id/resetPasswordLocal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:background="@android:color/holo_blue_light"
            android:layout_below="@+id/changeProfile"
            android:text="Reset Password" />


        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginTop="2dp"
            android:onClick="logout"
            android:background="@android:color/holo_blue_light"
            android:layout_below="@+id/resetPasswordLocal"
            android:text="Logout" />

    </RelativeLayout>
    </ScrollView>
</LinearLayout>
